# rumikspeechengine

./: .env.example  README.md  pyproject.toml
app/: main.py  preload.py  voice_agent.py
client/: package.json
client/src/app/: globals.css  layout.tsx  page.tsx
