[project]
name = "neuralengine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.138.0",
    "pipecat-ai[silero,livekit,openai,mlx-whisper]",
    "pipecat-rumik",
    "livekit-api",
    "python-dotenv",
    "loguru",
]
